[gd_scene load_steps=6 format=3 uid="uid://b7im836kbgvpq"]

[ext_resource type="Script" uid="uid://culwnl15ah7c4" path="res://resources/interface/settings.gd" id="1_h8kac"]
[ext_resource type="Script" uid="uid://bsieqov4qk1a7" path="res://resources/interface/components/video.gd" id="1_v30yi"]
[ext_resource type="PackedScene" uid="uid://1q22h2kjiuyd" path="res://resources/interface/components/Input_binder.tscn" id="2_h8kac"]
[ext_resource type="Script" uid="uid://b7wnu3icqbhji" path="res://resources/interface/components/sound_slider.gd" id="3_vahyb"]
[ext_resource type="Script" uid="uid://cu7yv2vvtoomn" path="res://resources/volume_slider.gd" id="4_cfgim"]

[node name="Settings" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h8kac")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 89.0
offset_right = 26.0
offset_bottom = 112.0
grow_horizontal = 2
text = "SETTINGS"

[node name="tabs" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.8
offset_left = -0.300003
offset_top = -0.600006
offset_right = -0.299988
offset_bottom = -0.599976
tab_alignment = 1
current_tab = 2
tabs_position = 1

[node name="Game" type="PanelContainer" parent="tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="GridContainer" type="GridContainer" parent="tabs/Game"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
columns = 2

[node name="Label" type="Label" parent="tabs/Game/GridContainer"]
layout_mode = 2
text = "aaa"

[node name="Button" type="Button" parent="tabs/Game/GridContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="tabs/Game/GridContainer"]
layout_mode = 2
text = "aaa"

[node name="Button2" type="Button" parent="tabs/Game/GridContainer"]
layout_mode = 2

[node name="Video" type="PanelContainer" parent="tabs"]
visible = false
layout_mode = 2
script = ExtResource("1_v30yi")
metadata/_tab_index = 1

[node name="GridContainer" type="GridContainer" parent="tabs/Video"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Resolution" type="Label" parent="tabs/Video/GridContainer"]
layout_mode = 2
text = "Resolution"

[node name="Res_select" type="OptionButton" parent="tabs/Video/GridContainer"]
layout_mode = 2

[node name="mode" type="Label" parent="tabs/Video/GridContainer"]
layout_mode = 2
text = "Screen Mode"

[node name="dis_mode" type="OptionButton" parent="tabs/Video/GridContainer"]
layout_mode = 2

[node name="Control" type="PanelContainer" parent="tabs"]
layout_mode = 2
metadata/_tab_index = 2

[node name="TabContainer" type="TabContainer" parent="tabs/Control"]
layout_mode = 2
current_tab = 0

[node name="Keyboard" type="GridContainer" parent="tabs/Control/TabContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
columns = 2
metadata/_tab_index = 0

[node name="Control" parent="tabs/Control/TabContainer/Keyboard" instance=ExtResource("2_h8kac")]
layout_mode = 2

[node name="Control2" parent="tabs/Control/TabContainer/Keyboard" instance=ExtResource("2_h8kac")]
layout_mode = 2
action_name = "right"

[node name="Control3" parent="tabs/Control/TabContainer/Keyboard" instance=ExtResource("2_h8kac")]
layout_mode = 2
action_name = "up"

[node name="Control4" parent="tabs/Control/TabContainer/Keyboard" instance=ExtResource("2_h8kac")]
layout_mode = 2
action_name = "down"

[node name="Control5" parent="tabs/Control/TabContainer/Keyboard" instance=ExtResource("2_h8kac")]
layout_mode = 2

[node name="Control6" parent="tabs/Control/TabContainer/Keyboard" instance=ExtResource("2_h8kac")]
layout_mode = 2

[node name="controller" type="GridContainer" parent="tabs/Control/TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
columns = 2
metadata/_tab_index = 1

[node name="Control" parent="tabs/Control/TabContainer/controller" instance=ExtResource("2_h8kac")]
layout_mode = 2

[node name="Control2" parent="tabs/Control/TabContainer/controller" instance=ExtResource("2_h8kac")]
layout_mode = 2
action_name = "right"

[node name="Control3" parent="tabs/Control/TabContainer/controller" instance=ExtResource("2_h8kac")]
layout_mode = 2
action_name = "up"

[node name="Control4" parent="tabs/Control/TabContainer/controller" instance=ExtResource("2_h8kac")]
layout_mode = 2
action_name = "down"

[node name="Control5" parent="tabs/Control/TabContainer/controller" instance=ExtResource("2_h8kac")]
layout_mode = 2

[node name="Control6" parent="tabs/Control/TabContainer/controller" instance=ExtResource("2_h8kac")]
layout_mode = 2

[node name="Sound" type="PanelContainer" parent="tabs"]
visible = false
layout_mode = 2
script = ExtResource("3_vahyb")
metadata/_tab_index = 3

[node name="GridContainer" type="GridContainer" parent="tabs/Sound"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Label" type="Label" parent="tabs/Sound/GridContainer"]
layout_mode = 2
text = "sound volume"

[node name="sfx" type="HSlider" parent="tabs/Sound/GridContainer"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
max_value = 1.0
step = 0.01
script = ExtResource("4_cfgim")

[node name="Label2" type="Label" parent="tabs/Sound/GridContainer"]
layout_mode = 2
text = "music volume"

[node name="music" type="HSlider" parent="tabs/Sound/GridContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
max_value = 1.0
step = 0.01
script = ExtResource("4_cfgim")
bus = "music"

[node name="Label3" type="Label" parent="tabs/Sound/GridContainer"]
layout_mode = 2
text = "master volume"

[node name="master" type="HSlider" parent="tabs/Sound/GridContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
max_value = 1.0
step = 0.01
script = ExtResource("4_cfgim")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 591.0
offset_top = 620.0
offset_right = 675.0
offset_bottom = 658.0
text = "return"

[connection signal="item_selected" from="tabs/Video/GridContainer/Res_select" to="tabs/Video" method="_on_res_select_item_selected"]
[connection signal="item_selected" from="tabs/Video/GridContainer/dis_mode" to="tabs/Video" method="_on_dis_mode_item_selected"]
[connection signal="value_changed" from="tabs/Sound/GridContainer/sfx" to="tabs/Sound/GridContainer/sfx" method="_on_value_changed"]
[connection signal="value_changed" from="tabs/Sound/GridContainer/music" to="tabs/Sound/GridContainer/music" method="_on_value_changed"]
[connection signal="value_changed" from="tabs/Sound/GridContainer/master" to="tabs/Sound/GridContainer/master" method="_on_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
